# fewshot_samclip

./: .gitignore  README.md  pyproject.toml
examples/: fewshot_example.py
fewshot_samclip/: fewshot_detector.py
