[tool.poetry]
name = "fewshot-samclip"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <4"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
clip = {git = "https://github.com/openai/CLIP.git"}
matplotlib = "^3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
